--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -3,6 +3,10 @@ body{
   text-align: justify;
 }
 
+.wy-side-nav-search .wy-dropdown>a img.logo, .wy-side-nav-search>a img.logo {
+  width: 75%;
+}
+
 div.admonition.success_note > .admonition-title:before {
   font-family: "Font Awesome 5 Free";
   content:  "✔️";
@@ -46,4 +50,39 @@ div.admonition.warning_note > .admonition-title{
 div.admonition.warning_note{
   background-color: rgb(255,237,204);
   /* border:1px solid rgb(38, 121, 15,1.0); */
+}
+
+div.admonition.tip_note > .admonition-title:before {
+  font-family: "Font Awesome 5 Free";
+  content:  "🔥";
+  font-size: 22px;
+  font-weight:800;
+  margin-right: 2px;
+  display: inline-block;
+  padding-right: 3px;
+  vertical-align: middle;
+  color: transparent;  
+  text-shadow: 0 0 0 rgb(103, 63, 202);
+}
+
+div.admonition.tip_note > .admonition-title{
+  color: white;
+  background-color: rgba(169, 150, 216, 0.823);
+}
+
+div.admonition.tip_note{
+  background-color: rgb(242,237,255);
+  /* border:1px solid rgb(38, 121, 15,1.0); */
+}
+
+span.requirement{
+  color:rgb(166, 0, 130);
+}
+
+span.parameter_property{
+  color:rgb(12, 120, 203);
+}
+
+h6.parameter_heading{
+  font-size: 18px;
 }
